Updated colab file description

--- a/auto_mhddos_no_proxy.ipynb
+++ b/auto_mhddos_no_proxy.ipynb
@@ -32,7 +32,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This tool uses [mhddos](https://github.com/MHProDev/MHDDoS) to attack targets from [targets file](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets). Targets are refreshed automatically."
+        "This tool uses [mhddos](https://github.com/MHProDev/MHDDoS) to attack targets from [targets file](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets). Targets are refreshed automatically.\n",
+        "\n",
+        "Telegram channel: [Украинский жнец (DDoS)](https://t.me/ukrainian_reaper_ddos)\n",
+        "\n"
       ],
       "metadata": {
         "id": "e6KJLi-5Ih6R"
