Switched to a proxy-based version

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -66,11 +66,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!bash runner.sh&\n",
-        "!sleep \"10m\"\n",
-        "!pkill -f runner.py\n",
-        "!pkill -f start.py\n",
-        "!pkill -f ifstat"
+        "!bash runner.sh",
       ],
       "metadata": {
         "id": "5R0oboScD87x"
