--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -66,7 +66,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!bash runner.sh",
+        "!bash runner.sh"
       ],
       "metadata": {
         "id": "5R0oboScD87x"
