Muted notebook setup output

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -113,16 +113,22 @@
     {
       "cell_type": "code",
       "source": [
-        "!apt-get install ifstat -y\n",
-        "!apt-get upgrade ifstat -y\n",
-        "!python -m pip install --upgrade pip\n",
+        "!apt-get install ifstat -y &> /dev/null\n",
+        "!apt-get upgrade ifstat -y &> /dev/null\n",
+        "\n",
+        "!python -m pip uninstall google-colab datascience -y &> /dev/null\n",
+        "!python -m pip install --upgrade pip &> /dev/null\n",
+        "\n",
         "%cd ~\n",
-        "%rm -r auto_mhddos\n",
-        "!git clone https://github.com/white-sagittarius/auto_mhddos.git\n",
-        "%rm -r mhddos_proxy\n",
-        "!git clone https://github.com/porthole-ascend-cinnamon/mhddos_proxy.git\n",
+        "\n",
+        "%rm -r auto_mhddos &> /dev/null\n",
+        "!git clone https://github.com/white-sagittarius/auto_mhddos.git &> /dev/null\n",
+        "\n",
+        "%rm -r mhddos_proxy &> /dev/null\n",
+        "!git clone https://github.com/porthole-ascend-cinnamon/mhddos_proxy.git &> /dev/null\n",
         "%cd mhddos_proxy\n",
-        "!python3 -m pip install -r requirements.txt\n",
+        "!python3 -m pip install -r requirements.txt &> /dev/null\n",
+        "\n",
         "%cd ~/auto_mhddos"
       ],
       "metadata": {
