Use fixed mhddos_proxy version

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -127,6 +127,7 @@
     "%rm -r mhddos_proxy &> /dev/null\n",
     "!git clone https://github.com/porthole-ascend-cinnamon/mhddos_proxy.git &> /dev/null\n",
     "%cd mhddos_proxy\n",
+    "!git checkout 17f0dd54ac21cc0a661880685be8de6a4534d63e &> /dev/null\n",
     "!python3 -m pip install -r requirements.txt &> /dev/null\n",
     "\n",
     "%cd ~/auto_mhddos"
