--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -25,7 +25,7 @@
     "<br/>\n",
     "\n",
     "### Запуск: меню \"Runtime\" -> \"Run all\" (Ctrl/⌘ + F9)\n",
-    "### Зупинка або ручний рестарт: меню \"Runtime\" -> \"Mange sessions\" (можна зупиняти всі вкладки одночасно)\n",
+    "### Зупинка або ручний рестарт: меню \"Runtime\" -> \"Manage sessions\" (можна зупиняти всі вкладки одночасно)\n",
     "\n",
     "###### Якщо ви не бачите меню вгорі, вимкніть AdBlock\n",
     "<br/>\n",
