Updated mhddos_proxy dependency version (prod)

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -25,7 +25,7 @@
     "<br/>\n",
     "\n",
     "### Запуск: меню \"Runtime\" -> \"Run all\" (Ctrl/⌘ + F9)\n",
-    "### Зупинка або ручний рестарт: меню \"Runtime\" -> \"Manage sessions\" (можна зупиняти всі вкладки одночасно)\n",
+    "### Для зупинки або рестарту -> \"Runtime\" -> \"Manage sessions\" -> \"Terminate\"\n",
     "\n",
     "###### Якщо ви не бачите меню вгорі, вимкніть AdBlock\n",
     "<br/>\n",
@@ -39,17 +39,10 @@
   {
    "cell_type": "code",
    "source": [
-    "!apt-get install ifstat -y &> /dev/null\n",
-    "!apt-get upgrade ifstat -y &> /dev/null\n",
-    "\n",
-    "!python -m pip uninstall google-colab datascience -y &> /dev/null\n",
-    "!python -m pip install --upgrade pip &> /dev/null\n",
-    "\n",
     "%cd ~\n",
-    "\n",
     "%rm -r auto_mhddos &> /dev/null\n",
     "!git clone https://github.com/white-sagittarius/auto_mhddos.git &> /dev/null\n",
-    "%cd ~/auto_mhddos\n"
+    "%cd ~/auto_mhddos"
    ],
    "metadata": {
     "id": "iwL1D0yQ2Y5X"
