added clear log hint

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -18,23 +18,25 @@
  },
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
    "source": [
     "###### Цей скрипт використовує [mhddos-proxy](https://github.com/porthole-ascend-cinnamon/mhddos_proxy) для атаки цілей [з цього списку](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets). Цілі підбираються та оновлюються автоматично телеграм групою [Український Жнець](https://t.me/ukrainian_reaper_ddos). Весь код має вільний доступ та викладено [тут](https://github.com/white-sagittarius/auto_mhddos). Слава Україні!\n",
     "---\n",
     "<br/>\n",
     "\n",
-    "### Запуск: меню \"Runtime\" -> \"Run all\" (Ctrl/⌘ + F9)\n",
-    "### Для зупинки або рестарту -> \"Runtime\" -> \"Manage sessions\" -> \"Terminate\"\n",
-    "\n",
-    "###### Якщо ви не бачите меню вгорі, вимкніть AdBlock\n",
+    "### Запуск: меню \"Runtime\" -> \"Run all\"; зупинка або рестарт -> \"Runtime\" -> \"Manage sessions\" -> \"Terminate\" (якщо ви не бачите меню вгорі, вимкніть AdBlock)\n",
     "<br/>\n",
     "\n",
     "---"
    ],
    "metadata": {
-    "id": "02jB8Um4KqQS"
-   }
+    "id": "02jB8Um4KqQS",
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -51,10 +53,9 @@
    "outputs": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
    "source": [
     "### Будь ласка, очікуйте виводу інформації щодо поточного стану атаки. Для першого запуску це може зайняти кілька хвилин\n",
-    "\n",
     "<details>\n",
     "  <summary><blockquote><i>для перегляду додаткових параметрів запуску натисніть на трикутник згори; це не обов'язково, лише для відладки та для впевнених користувачів</i></blockquote></summary>\n",
     "\n",
@@ -88,21 +89,30 @@
     "    !bash runner.sh -r 3h -t 1000 -p 1 -s 10\n",
     "\n",
     "    Long and short options can be mixed in a single command. Order of options does not matter. No options are required.\n",
-    "</details>\n"
+    "</details>"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
    "source": [
-    "### Поточний стан атаки - скрол донизу сторінки\n",
-    "###### [час, розбіжність 3 години] -> вхідна швидкість ↓MBit/s↓ -> вихідна швидкість ↑MBit/s↑"
+    "### Поточний стан атаки - прокрутіть донизу сторінки. Формат: [час, розбіжність 3 години] -> вхідна швидкість ↓MBit/s↓ -> вихідна швидкість ↑MBit/s↑"
    ],
    "metadata": {
-    "id": "9ZHLG9gfB0eK"
-   }
+    "id": "9ZHLG9gfB0eK",
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
