cleaned up ui a bit

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -18,19 +18,33 @@
  },
  "cells": [
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "source": [
     "###### Цей скрипт використовує [mhddos-proxy](https://github.com/porthole-ascend-cinnamon/mhddos_proxy) для атаки цілей [з цього списку](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets). Цілі підбираються та оновлюються автоматично телеграм групою [Український Жнець](https://t.me/ukrainian_reaper_ddos). Весь код має вільний доступ та викладено [тут](https://github.com/white-sagittarius/auto_mhddos). Слава Україні!\n",
     "---\n",
-    "<br/>\n",
     "\n",
-    "### Запуск: меню \"Runtime\" -> \"Run all\"; зупинка або рестарт -> \"Runtime\" -> \"Manage sessions\" -> \"Terminate\" (якщо ви не бачите меню вгорі, вимкніть AdBlock)\n",
-    "<br/>\n",
-    "\n",
+    "### <strong>Запуск</strong>: меню \"Runtime\" -> \"Run all\". <strong>Зупинка або рестарт</strong> -> меню \"Runtime\" -> \"Manage sessions\" -> \"Terminate\"\n",
+    "##### (якщо ви не бачите меню вгорі, вимкніть AdBlock)\n",
     "---"
    ],
    "metadata": {
     "id": "02jB8Um4KqQS",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "%%capture\n",
+    "%cd ~\n",
+    "%rm -rf auto_mhddos\n",
+    "!git clone https://github.com/white-sagittarius/auto_mhddos.git\n",
+    "%cd ~/auto_mhddos"
+   ],
+   "metadata": {
+    "id": "iwL1D0yQ2Y5X",
     "pycharm": {
      "name": "#%%\n"
     }
@@ -39,25 +53,37 @@
    "outputs": []
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "source": [
-    "%cd ~\n",
-    "%rm -r auto_mhddos &> /dev/null\n",
-    "!git clone https://github.com/white-sagittarius/auto_mhddos.git &> /dev/null\n",
-    "%cd ~/auto_mhddos"
+    "### <strong>Поточний стан атаки</strong> відображатиметься за кілька хвилин після запуску\n",
+    "##### Формат: [час, розбіжність 3 години] -> вхідна швидкість ↓MBit/s↓ -> вихідна швидкість ↑MBit/s↑"
    ],
    "metadata": {
-    "id": "iwL1D0yQ2Y5X"
-   },
-   "execution_count": null,
-   "outputs": []
+    "id": "9ZHLG9gfB0eK",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "### Будь ласка, очікуйте виводу інформації щодо поточного стану атаки. Для першого запуску це може зайняти кілька хвилин\n",
+    "!bash runner.sh"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "<details>\n",
-    "  <summary><blockquote><i>для перегляду додаткових параметрів запуску натисніть на трикутник згори; це не обов'язково, лише для відладки та для впевнених користувачів</i></blockquote></summary>\n",
+    "  <summary>Опціонально: нажміть для додаткових параметрів запуску</summary>\n",
     "\n",
     "    `-r`, `--refresh-interval`. How frequently script should refresh targets. Download targets from [targets file](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets) every NUMBER time units. SUFFIX may be \"m\" for minutes, \"h\" for hours or \"d\" for days. Suggested range: [10m, 1d]. Default: \"15m\"\n",
     "\n",
@@ -89,41 +115,17 @@
     "    !bash runner.sh -r 3h -t 1000 -p 1 -s 10\n",
     "\n",
     "    Long and short options can be mixed in a single command. Order of options does not matter. No options are required.\n",
-    "</details>"
+    "</details>\n",
+    "\n",
+    "##### Опціонально: для *автоматичної очистки виводу на екран кожні 10 хвилин*, вставте у консоль браузера (визивається через F12) та нажміть ентер:\n",
+    "`function ClearOutput(){ document.querySelector(\"iron-icon[command = 'clear-focused-or-selected-outputs']\").click() } setInterval(ClearOutput,600000)`"
    ],
    "metadata": {
-    "collapsed": false,
+    "id": "5R0oboScD87x",
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
-   },
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "### Поточний стан атаки - прокрутіть донизу сторінки. Формат: [час, розбіжність 3 години] -> вхідна швидкість ↓MBit/s↓ -> вихідна швидкість ↑MBit/s↑"
-   ],
-   "metadata": {
-    "id": "9ZHLG9gfB0eK",
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "!bash runner.sh"
-   ],
-   "metadata": {
-    "id": "5R0oboScD87x"
-   },
-   "execution_count": null,
-   "outputs": []
+   }
   }
  ]
 }
