update console clear instructions

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -41,7 +41,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#@title Результати атаки (якщо оновлюється кожні ~2 хвилини -> все ОК): { display-mode: \"form\" }\n",
+    "#@title Результати атаки (якщо оновлюються кожні ~2 хвилини -> все ОК): { display-mode: \"form\" }\n",
     "%cd ~\n",
     "%rm -rf auto_mhddos &> /dev/null\n",
     "!git clone https://github.com/white-sagittarius/auto_mhddos.git &> /dev/null\n",
@@ -63,8 +63,8 @@
     "\n",
     "     - виведіть консоль вашого браузера; зазвичай, вона визивається клавішею F12\n",
     "     - переконайтесь, що фокус стоїть на вкладці Console\n",
-    "     - введіть текст нижче та нажміть ентер\n",
-    "     - function ClearOutput(){ document.querySelector(\"iron-icon[command = 'clear-focused-or-selected-outputs']\").click() } setInterval(ClearOutput,300000)\n",
+    "     - скопіюйте текст нижче, вставте його у поле вводу після > та мигаючого | i нажміть ентер:\n",
+    "    function ClearOutput(){ document.querySelector(\"iron-icon[command = 'clear-focused-or-selected-outputs']\").click() } setInterval(ClearOutput,300000)\n",
     "     - кожні 5 хвилин вивід результатів буде очищено; консоль браузера можна закривати\n",
     "\n",
     "</details>\n",
