update pdf and fix typs in notebooks

--- a/auto_mhddos.ipynb
+++ b/auto_mhddos.ipynb
@@ -59,9 +59,9 @@
    "cell_type": "markdown",
    "source": [
     "<details>\n",
-    "  <summary>Опціонально: нажміть для інструкції з <strong>автоматичної очистки виводу на екран</strong></summary>\n",
+    "  <summary>Опціонально: натисніть для інструкції з <strong>автоматичної очистки виводу на екран</strong></summary>\n",
     "\n",
-    "     - виведіть консоль вашого браузера; зазвичай, вона визивається клавішею F12\n",
+    "     - виведіть консоль вашого браузера; зазвичай, вона викликається клавішею F12\n",
     "     - переконайтесь, що фокус стоїть на вкладці Console\n",
     "     - скопіюйте текст нижче, вставте його у поле вводу після > та мигаючого | i нажміть ентер:\n",
     "    function ClearOutput(){ document.querySelector(\"iron-icon[command = 'clear-focused-or-selected-outputs']\").click() } setInterval(ClearOutput,300000)\n",
@@ -70,7 +70,7 @@
     "</details>\n",
     "\n",
     "<details>\n",
-    "  <summary>Опціонально: нажміть для додаткових параметрів запуску</summary>\n",
+    "  <summary>Опціонально: натисніть для додаткових параметрів запуску</summary>\n",
     "\n",
     "    `-r`, `--refresh-interval`. How frequently script should refresh targets. Download targets from [targets file](https://raw.githubusercontent.com/Aruiem234/auto_mhddos/main/runner_targets) every NUMBER time units. SUFFIX may be \"m\" for minutes, \"h\" for hours or \"d\" for days. Suggested range: [10m, 1d]. Default: \"15m\"\n",
     "\n",
